--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "firebase-admin": "^13.5.0",
     "framer-motion": "^12.23.13",
     "lucide-react": "^0.544.0",
-    "next": "14.2.4",
+    "next": "^14.2.32",
     "react": "^18",
     "react-dom": "^18",
     "server-only": "^0.0.1",
